--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'France -- Social life and customs -- Fiction'
 - !lcc 'PQ'
 - !lcsh 'Inheritance and succession -- Fiction'
+- GITenberg
 title: Veljekset
 url: http://www.gutenberg.org/ebooks/44944
